--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
     <properties>
         <java.version>21</java.version>
+        <spring-statemachine-core.version>4.0.0</spring-statemachine-core.version>
     </properties>
 
     <dependencies>
@@ -32,6 +33,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.statemachine</groupId>
+            <artifactId>spring-statemachine-core</artifactId>
+            <version>${spring-statemachine-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
